Bug 359824 - necko unit test failure: test_authentication.js.  Previous commit to revert bug 223846 forgot to remove an extra header that the original commit added; this commit removes that unnecessary include.  r=vlad on the original backout patch